# oldsnake

./: .gitignore  CMakeLists.txt  README.md
include/: field.h  snake.h
src/: field.cpp  main.cpp  snake.cpp
